chanapi-macros/tests/ui/fail_api_id_overflow.stderr
error: chanapi::service: api_id = 70000 does not fit in u16 (max 65535)
 --> tests/ui/fail_api_id_overflow.rs:1:29
  |
1 | #[chanapi::service(api_id = 70000)]
  |                             ^^^^^
